# serializer version: 1
# name: test_mower_snapshot[battery]
  Battery(battery_percent=50)
# ---
# name: test_mower_snapshot[calendar]
  Tasks(tasks=[Calendar(start=120, duration=49, monday=True, tuesday=False, wednesday=False, thursday=False, friday=False, saturday=False, sunday=False, work_area_id=None)], events=[AutomowerCalendarEvent(start=FakeDatetime(2024, 5, 13, 0, 0, tzinfo=datetime.timezone.utc), end=FakeDatetime(2024, 5, 13, 0, 49, tzinfo=datetime.timezone.utc), rrule='FREQ=WEEKLY;BYDAY=MO', uid='120_49_MO', work_area_id=None)])
# ---
# name: test_mower_snapshot[capabilities]
  Capabilities(headlights=False, work_areas=False, position=False, stay_out_zones=False)
# ---
# name: test_mower_snapshot[metadata]
  Metadata(connected=True, status_dateteime=FakeDatetime(2023, 10, 18, 22, 58, 52, 683000, tzinfo=datetime.timezone.utc))
# ---
# name: test_mower_snapshot[mower]
  Mower(mode='MAIN_AREA', activity='PARKED_IN_CS', state='RESTRICTED', error_code=0, error_key=None, error_datetime=None, error_datetime_naive=None)
# ---
# name: test_mower_snapshot[planner]
  Planner(next_start_datetime=FakeDatetime(2023, 6, 5, 17, 0, tzinfo=datetime.timezone.utc), next_start_datetime_naive=FakeDatetime(2023, 6, 5, 19, 0), override=Override(action='NOT_ACTIVE'), restricted_reason='WEEK_SCHEDULE')
# ---
# name: test_mower_snapshot[positions]
  list([
  ])
# ---
# name: test_mower_snapshot[settings]
  Settings(headlight=Headlight(mode=None), cutting_height=None)
# ---
# name: test_mower_snapshot[statistics]
  Statistics(cutting_blade_usage_time=None, number_of_charging_cycles=None, number_of_collisions=None, total_charging_time=None, total_cutting_time=None, total_drive_distance=None, total_running_time=None, total_searching_time=None)
# ---
# name: test_mower_snapshot[stay_out_zones]
  None
# ---
# name: test_mower_snapshot[system]
  System(name='Test Mower 1', model='Automower Aspire', serial_number=123)
# ---
# name: test_mower_snapshot[work_areas]
  None
# ---
